[metadata]
name = jupyter-graphql
version = 0.1.0
description =
long_description = file: README.md, CHANGELOG.md
url = https://github.com/deathbeds/jupyter-graphql
author = Dead Pixels Collective
author_email = ripxl@groups.google.com
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Testing
    Web
    GraphQL
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    graphene-tornado
    graphql-ws
    iso8601
    notebook
    werkzeug

package_dir =
    = src/py
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src/py

[flake8]
max-line-length = 88
